@@ -1,0 +1,140 @@
+aclocal.m4
+acom1.f90
+acom2.f90
+afc2.f90
+audiodev.f90
+AUTHORS
+autogen.sh
+averms.f90
+azdist.f90
+calibrate.f90
+calobs.f90
+ccf2.f90
+ccf.f90
+chklevel.f90
+clean.f90
+configure.ac
+conv232.f90
+COPYING
+COPYRIGHT
+cs_stubs.f90
+db.f90
+decode162.f90
+decode.f90
+deg2grid.f90
+encode232.f90
+fano232.f90
+fcal.f90
+fchisq.f90
+ffa.f90
+fftw3.f90
+fil1.f90
+flat3.f90
+fmeasure.f90
+fmtave.f90
+fmt.f90
+fmtiq.f90
+fold1pps.f90
+four2a.f90
+fthread.c
+ftn_quit.f90
+gencwid.f90
+genmept.f90
+genwspr.f90
+geodist.f90
+getfile.f90
+getrms.f90
+getsound.c
+getutc.f90
+gmtime2.c
+gocal
+gran.f90
+grid2deg.f90
+hamlib_rig_numbers
+hash.f90
+hftoa.f90
+INSTALL.txt
+inter_mept.f90
+iqdemod.f90
+loggit.f90
+Makefile.in
+mept162.f90
+mix162.f90
+morse.f90
+msgtrim.f90
+nchar.f90
+NEWS
+nhash.c
+pack50.f90
+packcall.f90
+packgrid.f90
+packname.f90
+packpfx.f90
+packprop.f90
+packtext2.f90
+padevsub.c
+paterminate.f90
+pctile.f90
+peakup.f90
+phasetx.f90
+playsound.c
+PmwBlt.py
+PmwColor.py
+Pmw.py
+ps162.f90
+ptt_unix.c
+qth.f90
+README
+read_wav.f90
+resample.c
+rx.f90
+rxtest.f90
+rxtxcoord.f90
+set.f90
+slope.f90
+sort.f90
+sound.c
+spec162.f90
+speciq.f90
+ssort.f90
+startdec.f90
+startrx.f90
+start_threads.c
+starttx.f90
+sync162.f90
+t1.f90
+thcvf.f90
+thnix.f90
+thnix_stub.f90
+tkrep.py
+twkfreq.f90
+tx.f90
+unpack50.f90
+unpackcall.f90
+unpackgrid.f90
+unpackmept.f90
+unpackname.f90
+unpackpfx.f90
+unpackprop.f90
+unpacktext2.f90
+user_hardware.py
+wfile5.f90
+wqdecode.f90
+wqencode.f90
+write_wav.f90
+wsjt.ico
+wspr0.f90
+wspr0init.f90
+wspr0_rx.f90
+wspr0_tx.f90
+wspr1.f90
+wspr2.f90
+wsprcode.f90
+wspr_nogui.py
+wspr.py
+wsprrc
+wspr_rxtest.f90
+wspr_tr.in0
+wwv.f90
+xcor162.f90
+xfft.f90
